# comfyui-ollama-prompt-encode

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  pyproject.toml  requirements.txt
docs/: ollama_basic_workflow.json
nodes/: OllamaClipTextEncode.py  OllamaPromptGenerator.py  __init__.py  sample_data.csv  sample_data_comma.csv  sample_data_descriptive.csv  timeout.py
test/: test_OllamaClipTextEncode.py  test_OllamaPromptGenerator.py
