[project]
name = "comfyui-ollama-prompt-encode"
description = "A prompt generator and CLIP encoder using AI provided by Ollama."
version = "2.1.0"
authors = [
  {name = "Michael Standen", email = "screaminghawk@gmail.com"},
]
maintainers = [
  {name = "Michael Standen", email = "screaminghawk@gmail.com"},
]
license = { file = "LICENSE" }
readme = "README.md"
dependencies = ["ollama==0.2.1"]

[project.urls]
Repository = "https://github.com/ScreamingHawk/comfyui-ollama-prompt-encode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "michaelstanden"
DisplayName = "comfyui-ollama-prompt-encode"
Icon = "https://github.com/ScreamingHawk/comfyui-ollama-prompt-encode/blob/main/docs/icon.png?raw=true"
